--- a/index.html
+++ b/index.html
@@ -44,11 +44,12 @@
 
       <div class="logo float-left">
      
-        <h1 class="text-light"><a href="#intro" class="scrollto"><span>OPENCODE'20</span></a></h1>
+        <h1 class="text-light h1head"><a href="#intro" class="scrollto"><span>OPENCODE'20</span><span class = "navbutton" id="threedash" style="font-size:30px;cursor:pointer" onclick="openNav()">&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&#9776;</span></a></h1>
         <!-- <a href="#header" class="scrollto"><img src="img/logo.png" alt="" class="img-fluid"></a> -->
       </div>
 
-      <nav class="main-nav float-right d-none d-lg-block">
+      <div id="mySidenav" class="sidenav">
+        <a href="javascript:void(0)" class="closebtn navbutton" onclick="closeNav()">&times;</a>
         <ul>
           <li class="active"><a href="#intro">Home</a></li>
           <li><a href="#about">About Us</a></li>
@@ -81,7 +82,7 @@
               width="25" height="25"></a>
             </li>
         </ul>
-      </nav><!-- .main-nav -->
+      </div><!-- .main-nav -->
       
     </div>
   </header><!-- #header -->
