--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       </div>
 
       <div id="mySidenav" class="sidenav">
-        <a href="javascript:void(0)" class="closebtn navbutton" onclick="closeNav()">&times;</a>
+        <a href="javascript:void(0)" class="closebtn navbutton" id = "crossonbigscreen" onclick="closeNav()">&times;</a>
         <ul>
           <li class="active"><a href="#intro">Home</a></li>
           <li><a href="#about">About Us</a></li>
