--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       </div>
 
       <div id="mySidenav" class="sidenav">
-        <a href="javascript:void(0)" class="closebtn navbutton" id = "crossonbigscreen" onclick="closeNav()">&times;</a>
+        <a href="javascript:void(0)" class="closebtn navbutton" onclick="closeNav()" id = "crossonbigscreen">&times;</a>
         <ul>
           <li class="active"><a href="#intro">Home</a></li>
           <li><a href="#about">About Us</a></li>
@@ -61,16 +61,16 @@
               <li><a href="#">Drop Down 1</a></li>
               <li class="drop-down"><a href="#">Drop Down 2</a>
                 <ul>
-                  <li><a href="#">Deep Drop Down 1</a></li>
-                  <li><a href="#">Deep Drop Down 2</a></li>
-                  <li><a href="#">Deep Drop Down 3</a></li>
-                  <li><a href="#">Deep Drop Down 4</a></li>
-                  <li><a href="#">Deep Drop Down 5</a></li>
+                  <li class = "In_drop_down_second"><a href="#">Deep Drop Down 1</a></li>
+                  <li class = "In_drop_down_second"><a href="#">Deep Drop Down 2</a></li>
+                  <li class = "In_drop_down_second"><a href="#">Deep Drop Down 3</a></li>
+                  <li class = "In_drop_down_second"><a href="#">Deep Drop Down 4</a></li>
+                  <li class = "In_drop_down_second"><a href="#">Deep Drop Down 5</a></li>
                 </ul>
               </li>
-              <li><a href="#">Drop Down 3</a></li>
-              <li><a href="#">Drop Down 4</a></li>
-              <li><a href="#">Drop Down 5</a></li>
+              <li><a href="#" class = "In_drop_down_first">Drop Down 3</a></li>
+              <li><a href="#" class = "In_drop_down_first">Drop Down 4</a></li>
+              <li><a href="#" class = "In_drop_down_first">Drop Down 5</a></li>
             </ul>
           </li>
           <li><a href="#footer">Contact Us</a></li>
